--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -32,7 +32,14 @@ jobs:
           AZURE_HOSTNAME: 'pcq-backend-prod.postgres.database.azure.com'
           AZURE_DB: 'pcq'
           SUBJECT: 'audit report'
-
+        ccd-data-store-api-postgres-db-v11-prod-ccd-data-store-pcq-divorce:
+          QUERY: ./scripts/ccd-data-store-api-postgres-db-v11-prod-ccd-data-store-pcq-divorce.sh
+          TO_ADDRESS: 'mohana.yalamanchi@hmcts.net' #to be replaced
+          CC_ADDRESS: 'alliu.balogun@reform.hmcts.net' #to be replaced
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
+          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com'
+          AZURE_DB: 'ccd_data_store'
+          SUBJECT: 'PCQ Divorce'
     steps:
       - task: AzureCLI@1
         displayName: 'Get access token'
