--- a/monthly-reports.yml
+++ b/monthly-reports.yml
@@ -1,7 +1,7 @@
 
 name: Postgres DB Daily Reports
 schedules:
-- cron: "0 3 * * 1"
+- cron: "0 1 1 * *"
   displayName: Daily reports
   branches:
     include:
