--- a/monthly-reports.yml
+++ b/monthly-reports.yml
@@ -2,7 +2,7 @@
 name: Postgres DB Monthly Reports
 schedules:
 - cron: "0 1 1 * *"
-  displayName: Daily reports
+  displayName: Monthly reports
   branches:
     include:
     - master
@@ -24,7 +24,7 @@ jobs:
       maxParallel: 1
       matrix:
         dm-store-postgres-db-prod-evidence-monthly-documentttlcheckreport:
-          QUERY: ./scripts/dm-store-postgres-db-prod-evidence-monthly-documentttlcheckreport.sh
+          QUERY: ./scripts/monthly/dm-store-postgres-db-prod-evidence-monthly-documentttlcheckreport.sh
           TO_ADDRESS: 'mohana.yalamanchi@hmcts.net' #TO_ADDRESS=lawrie.baber-scovell1@hmcts.net
           CC_ADDRESS: 'alliu.balogun@reform.hmcts.net'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@dm-store-postgres-db-prod"
@@ -32,7 +32,7 @@ jobs:
           AZURE_DB: 'evidence'
           SUBJECT: 'Documents TTL Check Monthly Report'
         dm-store-postgres-db-prod-evidence-monthly-docstorefilesizereport:
-          QUERY: ./scripts/dm-store-postgres-db-prod-evidence-monthly-docstorefilesizereport.sh
+          QUERY: ./scripts/monthly/dm-store-postgres-db-prod-evidence-monthly-docstorefilesizereport.sh
           TO_ADDRESS: 'mohana.yalamanchi@hmcts.net' #TO_ADDRESS=lawrie.baber-scovell1@hmcts.net
           CC_ADDRESS: 'alliu.balogun@reform.hmcts.net'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@dm-store-postgres-db-prod"
@@ -40,7 +40,7 @@ jobs:
           AZURE_DB: 'evidence'
           SUBJECT: 'Doc Store File Size Report Reporting'
         dm-store-postgres-db-prod-evidence-monthly-docstorefiletypereport:
-          QUERY: ./scripts/dm-store-postgres-db-prod-evidence-monthly-docstorefiletypereport.sh
+          QUERY: ./scripts/monthly/dm-store-postgres-db-prod-evidence-monthly-docstorefiletypereport.sh
           TO_ADDRESS: 'mohana.yalamanchi@hmcts.net' #TO_ADDRESS=lawrie.baber-scovell1@hmcts.net
           CC_ADDRESS: 'alliu.balogun@reform.hmcts.net'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@dm-store-postgres-db-prod"
@@ -48,7 +48,7 @@ jobs:
           AZURE_DB: 'evidence'
           SUBJECT: 'Doc Store File Type Report'
         dm-store-postgres-db-prod-evidence-monthly-auditofservicereport:
-          QUERY: ./scripts/dm-store-postgres-db-prod-evidence-monthly-auditofservicereport.sh
+          QUERY: ./scripts/monthly/dm-store-postgres-db-prod-evidence-monthly-auditofservicereport.sh
           TO_ADDRESS: 'mohana.yalamanchi@hmcts.net' #TO_ADDRESS=lawrie.baber-scovell1@hmcts.net
           CC_ADDRESS: 'alliu.balogun@reform.hmcts.net'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@dm-store-postgres-db-prod"
